data injection changed in albumlist component. bug fixed

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,7 +34,7 @@
 }
 
 @include iphone {
-	font-size: 20px; /* todo: tweak these sizes*/
+	font-size: 20px; // todo: tweak these sizes
 }
 
 @include tablet {
